# OnePlayer

./: .gitignore  CMakeLists.txt
src/: PlayerElement.cpp  Playerctl.cpp  ScreenManager.cpp  Ueberzug.cpp  Variable.cpp  Widget.cpp  main.cpp
src/includes/: PlayerElement.fwd.h  PlayerElement.h  Playerctl.h  ScreenManager.fwd.h  ScreenManager.h  Ueberzug.fwd.h  Ueberzug.h  Variable.fwd.h  Variable.h  Widget.fwd.h  Widget.h
